Also initialize properties when not using AMS

BUG: 431981
(cherry picked from commit 9f4a1433e416944fa26b8580eaad4a8f48fd61d8)