plugins/platforms/drm/drm_object_connector.cpp
@@ -27,7 +27,7 @@ DrmConnector::DrmConnector(uint32_t connector_id, int fd)
 
 DrmConnector::~DrmConnector() = default;
 
-bool DrmConnector::atomicInit()
+bool DrmConnector::init()
 {
     qCDebug(KWIN_DRM) << "Creating connector" << m_id;
 
